force-app/main/default/objects/PDF_ESignature_Command__e/PDF_ESignature_Command__e.object-meta.xml
<CustomObject>
    <description>Platform event used by the public signing page to request envelope updates without requiring the Site Guest User to edit records.</description>
    <label>E-Signature Command</label>
    <pluralLabel>E-Signature Commands</pluralLabel>
</CustomObject>