force-app/main/default/objects/PDF_ESignature_Command__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>40</length>
    <type>Text</type>
</CustomField>