force-app/main/default/objects/PDF_ESignature_Command__e/fields/Envelope_Id__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Id__c</fullName>
    <label>Envelope Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>