force-app/main/default/objects/PDF_ESignature_Command__e/fields/Payload_JSON__c.field-meta.xml
<CustomField>
    <fullName>Payload_JSON__c</fullName>
    <label>Payload JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>